--- a/EnumHasFlagMethodBenchmarking.csproj
+++ b/EnumHasFlagMethodBenchmarking.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFrameworks>netcoreapp3.1;net472;netcoreapp2.0</TargetFrameworks>
+    <TargetFrameworks>netcoreapp3.1;net472;net461;netcoreapp2.0</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
